Fixed a modal dialog z-indexing issue.

--- a/js_src/fisher/ui/fish/fish.css
+++ b/js_src/fisher/ui/fish/fish.css
@@ -42,7 +42,7 @@
   background: #2B73C5;
   /*background: #133D6E;*/
   bottom: 0;
-  opacity: 0.4;
+  opacity: 0.35;
   position: absolute;
   top: 0;
   z-index: 1;
